DuggaSys/diagram.css
/*
    Great for debugging and searching for causing overflows, uncomment it when using it and comment when it is not of use. 
*/
/* *{
    outline: 2px solid lightgreen;
} */

:root{
    --diagram-toolbar-height: 5rem;
    --normal-transition: all 300ms ease-in-out;
}
@keyframes loadingSpin {
    0% {
        rotate: 0deg;
    }

    100% {
        rotate: 360deg;
    }
}


@media screen and (min-width: 768px) {
    #diagram-toolbar {
        position: fixed;
        top: 0;
        left: 0;
        bottom: 0;
        width: 50px; 
        height: 100vh; 
        z-index: 1000;
    }
}
@media screen and (min-height: 1199px) {
    #diagram-toolbar {
        width: 50px;
    }

    #svggrid {
        left: 0px;
    }
}

@media screen and (min-height: 1200px) {
    #diagram-toolbar {
        width: 70px;
    }

    #svggrid {
        left: 20px;
    }
}

#loadingSpinner {
    width: 100vw;
    height: 100vh;
    z-index: 9999;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: 1s linear 0s infinite loadingSpin;
}

#container {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    user-select: none;
    overflow: hidden;
}

#diagramFileName {
    position: absolute;
    z-index: 1000;
    inset: 6vh 0 auto 0; /*Shorthand, top right bottom left*/
    max-width: 245px;
    margin-inline: auto; /*Centers the box*/
    padding: 2px;
    background-color: #fff;
    border: #775886 1px solid;
    text-align: center;

    >p{
        overflow: hidden;
        text-overflow: ellipsis;
    }
}

#svgbacklayer {
    position: absolute;
    left: 0;
    top: 0px;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: -10;
}

#svggrid {
    position: absolute;
    top: 0;
    display: none;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: -10;
}

#svgA4Template {
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: -10;
}

#a4Template {
    position: absolute;
    left: 0;
    top: 0;
    display: none;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: -10;
}

#svgoverlay {
    position: absolute;
    left: 0px;
    top: 0px;
    border: 1px dotted green;
    width: 100%;
    height: 100%;
    pointer-events: none;
    z-index: 10;
}

#fab {
    position: fixed;
    bottom: 30px;
    right: 30px;
    width: 80px;
    height: 80px;
    font-size: 36px;
    line-height: 80px;
    text-align: center;
    border-radius: 40px;
    background-color: #eb4;
    box-shadow: 6px 6px 10px #888;
    user-select: none;
    cursor: pointer;
    z-index: 5001;
}

#fab-options {
    position: fixed;
    top: 10vh;
    right: 7vw;
    width: 56px;
    height: 56px;
    font-size: 36px;
    line-height: 80px;
    text-align: center;
    border-radius: 40px;
    background-color: #eb4;
    user-select: none;
    cursor: pointer;
    z-index: 5000;
}

#options-pane {
    position: fixed;
    top: 0px;
    width: 320px;
    bottom: 0px;
    z-index: 5000;
    background-color:#eb4;
    color: #FFF;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
    box-shadow: 0px 6px 10px #888;
    padding: 10px;
    transition: right .3s ease-in-out;
    user-select: none;
    overflow-y: auto;
    overflow-x: hidden;
}

#options-pane-button {
    display: inline-block;
    vertical-align: top;
    transform-origin: top left;
    transform: translate(20px, 0px) rotate(90deg);
    cursor: pointer;
    width: 780px;
    padding: 6px;
}

#options-fab {
    display: grid;
    align-items: center;
    font-size: 40px;
}

#options-pane-content {
    margin-left: 20px;
    vertical-align: top;
    display: inline-block;
}

/* Options-scrollbar width */
#options-pane::-webkit-scrollbar {
    width: 10px;
}

/*  Options-scrollbar track */
#options-pane::-webkit-scrollbar-track {
    background: #f1f1f1;
    border-radius: 10px;
    box-shadow: inset 0 0 5px grey;
}

/*  Options-scrollbar handle */
#options-pane::-webkit-scrollbar-thumb {
    background: #64417A;
    border-radius: 10px;
}

/*  Options-scrollbar handle on hover */
#options-pane::-webkit-scrollbar-thumb:hover {
    background: #64417A;
    border-radius: 10px;
}

.show-options-pane {
    right: 0px;
}

.hide-options-pane {
    right: -308px;
}

.selected-entry {
    box-shadow: 6px 6px 10px #888;
}

#diagramTypeDropdown,
#diagramLoad {
    display: none;
}

#diagramTypeDropdown {
    width: 100%;
    margin-bottom: 10px;
}

.hide {
    display: none;
}

.element {
    font-size: small;
    box-sizing: border-box;
    overflow: hidden;
    position: absolute;
}

#pad_lock {
    bottom: -5px;
    left: 3px;
    display: block;
    position: absolute;
    background: inherit;
}

.element:has(#pad_lock) {
    overflow: visible;
}

#canvasOverlay {
    pointer-events: none;
    position: absolute;
    left: 0px;
    top: 0px;
    width: 100%;
    height: 100%;
}

.selected-course {
    box-shadow: 10px 10px 10px RGBA(0, 0, 0, 0.3);
}

#diagram-header {
    z-index: 1;
    position: relative;
    background-color: #FFF;
}

#rulerOverlay {
    display: none;
    position: absolute;
    left: 50px;
    top: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
    display: block;
    z-index: 20;
}

#ruler-y {
    left: 20px;
    background-color: #000;
    width: 30px;
    height: 1px !important;
    position: absolute;
    z-index: 500;
}

#ruler-x {
    top: 20px;
    background-color: #000;
    height: 30px;
    width: 1px;
    position: absolute;
    z-index: 500;
}

#ruler-x-svg {
    background-color: #fff;
    position: absolute;
    width: 100%;
    height: 40px;
    z-index: 2;
}

#ruler-y-svg {
    background-color: #fff;
    position: absolute;
    width: 40px;
    height: 100%;
    z-index: 2;
}

#rulerCorner {
    position: absolute;
    height: 40px;
    width: 40px;
    background-color: #fff;
    z-index: 700;
    top: 0px;
}
/* ... */

